# Dark_Circle

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATASET_CONSTRUCTION.md  Data exploration.ipynb  FOCAL_DataExploration_LVC.ipynb  README.md  data_exp_dependencies.txt  data_exploration.ipynb  logfile  m3n_data_exploration.ipynb  m3n_eda_lvc_fit.ipynb  paper_draft.txt  pyproject.toml  pyrightconfig.json  requirements.txt  test-report.html
crl-train/: README.md  REBUILD_CHECKLIST.md  causal_dataset.py  causal_vae.py  compare_ablations.py  compare_cross_location.py  compare_runs.py  crl_config.py  crl_vehicle_pipeline_plan.md  eval.py  eval_crl.py  export_for_inference.py  gather_top_confusions.py  per_vehicle_confusion.py  plot_aggregate.py  plot_metrics.py  plot_run.py  pyproject.toml  run_experiments.py  run_full_diagnostic.py  smoke_test.py  split_data.py  supervised_baseline.py  train.py  train_crl.py  validate_run.py
crl-train/configs/sweeps/: frontend_comparison.yaml
crl-train/crl_vehicle/: README.md  analysis.py  config.py  plotting.py  seeding.py  stage2.py
crl-train/crl_vehicle/data/: README.md  _table_io.py  dataset.py  id_split.py  transforms.py
crl-train/crl_vehicle/losses/: README.md  causal.py  combined.py  contrastive.py  crl_loss.py  disentangle.py  disentanglement.py  elbo.py
crl-train/crl_vehicle/models/: README.md  decoder.py  downstream.py  encoder.py  encoder_decoder.py  filterbank.py  frontend.py  frontend_factory.py  heads.py  intervention.py  latent.py  scm.py  spectrogram.py  ssm.py
crl-train/crl_vehicle/priors/: README.md  __init__.py  base.py  conditional.py  standard.py
crl-train/crl_vehicle/probe/: README.md  __init__.py  recalibration.py
crl-train/crl_vehicle/training_modes/: README.md  __init__.py  base.py  contrastive_mode.py  disentangled_mode.py  factory.py  vae_mode.py
crl-train/docs/: index.html  math_reference.md
crl-train/docs/specs/: 2026-04-25-id-split-schema-design.md
crl-train/old/: causal_dataset.py  causal_vae.py  eval_crl.py  split_data.py
crl-train/old/saved_crl/: crl_best.pth  crl_final.pth  crl_meta.json  crl_metrics.csv  det_head_final.pth  downstream_metrics.csv
crl-train/saved_crl/: _cleanup_deprecated.sh  _reorganize.sh  cls_head_best.pth  cls_head_final.pth  crl_best.pth  crl_final.pth  crl_metrics.csv  det_head_audio_best.pth  det_head_audio_final.pth  det_head_best.pth  det_head_seismic_best.pth  det_head_seismic_final.pth  downstream_metrics.csv  downstream_metrics_audio.csv  downstream_metrics_seismic.csv  inst_head_audio_best.pth  inst_head_seismic_best.pth  meta.json  presence_head_audio_best.pth  presence_head_seismic_best.pth  type_head_audio_best.pth  type_head_seismic_best.pth  validation_report.json
crl-train/saved_crl/_diag_bs256/: best.pth  summary.json
crl-train/saved_crl/_id_split_smoke/: crl_checkpoint_summary.json  crl_metrics.csv  downstream_metrics.csv
crl-train/saved_crl/analysis/: ablations.md  cross_location.csv  cross_location.md  leaderboard.csv  leaderboard.md
crl-train/saved_crl/diagnostics/: predictions.csv
crl-train/saved_crl/diagnostics_audio/: predictions.csv
crl-train/saved_crl/diagnostics_fused/: predictions_fused.csv
crl-train/saved_crl/diagnostics_seismic/: predictions.csv
crl-train/saved_crl/experiments/: report.json
crl-train/saved_crl/id_cache/: manifest_dc2bc176ff744c4ec0fb62848e01b13c2960102695a1f320314f7dcec086711d.json  (+2 more)
crl-train/scratch/: DEFERRED.md  apply_manifest.py  manifest.csv  moves.sh  reeval_eligible.py  reeval_legacy.py  reeval_preflight.py  reeval_preflight_results.json
crl-train/tests/: test_analysis.py  test_eval_metrics.py  test_export_for_inference.py  test_plotting.py  test_seeding.py  test_stage2.py  test_sweep_runner.py  test_trainer.py
crl-train/training/: README.md  eval.py  scheduler.py  trainer.py
inference-engine/: .gitignore  MAINTENANCE_MONITORING_PLAN.md  README.md  my-site-values.yaml  pyproject.toml
inference-engine/chart/: Chart.yaml  README.md  values.yaml
inference-engine/classify-bundles/: README.md  classify-default
inference-engine/crl-bundles/: README.md  multiscale-default
inference-engine/detect-bundles/: README.md  detect-default
inference-engine/inference-protos/: pyproject.toml
inference-engine/k8s/: discovery.yaml  egress.yaml  expected-sensors.yaml  fake-publisher.yaml  infer-classify.yaml  infer-detect.yaml  inference-engine-config.yaml  ingestor-channel-map.yaml  ingestor-template.yaml  ingestor.yaml  sensor-config.yaml
inference-engine/k8s/rbac/: role.yaml  (+2 more)
inference-engine/protos/: inference.proto
inference-engine/ros2_interfaces/: CMakeLists.txt  package.xml
inference-engine/scripts/: _cluster_up.sh  build_containers.sh  cluster_up_live.sh  compile_protos.py  install_build_host.sh  install_replay.sh  local_smoke.sh  replay_in_kind.sh  replay_publisher.py  tail_egress.sh  wait_for_pipeline_ready.sh
inference-engine/tests/: README.md  __init__.py  conftest.py  pytest.ini  test_buffer.py  test_discovery.py  test_egress.py  test_infer_classify.py  test_infer_detect.py  test_ingestor.py  test_requirements.txt
model-train/: README.md  aggregate_results.py  config.py  data_generator.py  dataset.py  db_utils.py  diagnose_alignment.py  eval.py  eval_rocket.py  models.py  preprocess.py  pyproject.toml  run_pipeline.sh  train.py  train_rocket.py  variables.py
model-train/saved_models/: category_ClassificationCNN_meta.pt  category_DetectionCNN_meta.pt  detection_ClassificationCNN_meta.pt  detection_ClassificationLSTM_best.pth  detection_ClassificationLSTM_meta.pt  detection_DetectionCNN_best.pth  detection_DetectionCNN_meta.pt  detection_WaveformClassificationCNN_meta.pt  instance_ClassificationCNN_meta.pt  master_evaluation_results.csv  master_evaluation_results_20260312_070416.csv  master_evaluation_results_20260312_071030.csv  results_03282026.txt
model-train/tests/: test_end_to_end_model.py  test_pipeline.py  test_streamer_mocked.py
server-load/: analyze_data.py  file_parse.py  load_db.py  optimize_db.py  pyproject.toml  sample_parse.py  variables.py
(+5329 files in other folders)
