[project]
name = "crl-train"
version = "0.1.0"
description = ""
authors = [
    {name = "Brandon Taylor",email = "btaylor9273@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchaudio (>=2.11.0,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "scikit-learn (>=1.5.0)",
    "seaborn (>=0.13.0)",
    "matplotlib (>=3.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
