[project]
name = "crl-train"
version = "0.1.0"
description = ""
authors = [
    {name = "Brandon Taylor",email = "btaylor9273@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchaudio (>=2.11.0,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "scikit-learn (>=1.5.0)",
    "seaborn (>=0.13.0)",
    "matplotlib (>=3.9.0)",
    # Linux specific wheel
    #"mamba-ssm @ https://github.com/state-spaces/mamba/releases/download/v2.2.4/mamba_ssm-2.2.4+cu12torch2.4cxx11abiFALSE-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    # Mac specific git source
    # "mamba-ssm @ git+https://github.com/purohit10saurabh/mamba-ssm-macos.git ; sys_platform == 'darwin'",
    # Causal-conv1d (required sibling)
    # "causal-conv1d @ git+https://github.com/purohit10saurabh/causal-conv1d-macos.git ; sys_platform == 'darwin'"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
