[tool.poetry]
name = "server-load"
version = "0.1.0"
description = ""
authors = ["Brandon Taylor <btaylor9273@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.13"
regex = ">=2026.1.15,<2027.0.0"
numpy = ">=2.4.2,<3.0.0"
pandas = ">=3.0.1,<4.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
pathlib = ">=1.0.1,<2.0.0"
pyarrow = ">=23.0.1,<24.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"