[project]
name = "infer-detect"
version = "0.1.0"
description = "Detector Node"
authors = [
    {name = "Brandon Taylor",email = "btaylor9273@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "nats-py (>=2.14.0,<3.0.0)",
]

# inference-protos is installed directly via pip in the Dockerfile
# from the local path ../../inference-protos — not available on PyPI


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
