[project]
name = "ingestor"
version = "0.1.0"
description = "Ingestor Node"
authors = [
    {name = "Brandon Taylor",email = "btaylor9273@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "nats-py (>=2.14.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
]

# rclpy is provided by the ROS2 environment (ros:jazzy base image)
# and is not available on PyPI — do not add via poetry

# inference-protos is installed directly via pip in the Dockerfile
# from the local path ../../inference-protos — not available on PyPI

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
